change text colors

--- a/src/scss/_variable.scss
+++ b/src/scss/_variable.scss
@@ -1,6 +1,6 @@
 // Colors
-$activeText: #FB743E;
-$default: #6D7280;
+$activeText: #73822e;
+$default: #68634f;
 $defaultBg: #F5F5F5;
 $black: #272343;
 $gray: #6D7280;
