--- a/src/scss/_variable.scss
+++ b/src/scss/_variable.scss
@@ -2,7 +2,7 @@
 $activeText: #73822e;
 $default: #68634f;
 $defaultBg: #F5F5F5;
-$black: #272343;
+$black: #2b3224;
 $gray: #6D7280;
 $darkGray: #494B5C;
 $link: #0A81D8;
