--- a/src/scss/pages/_theme.scss
+++ b/src/scss/pages/_theme.scss
@@ -1,5 +1,5 @@
 ::selection{
-    background-color: $activeText;
+    background-color: #73822e;
     color: white;
 }
 // Section Padding Starts Here
@@ -329,7 +329,7 @@
 
 // Footer Starts Here
 footer{
-    background: #272343;
+    background: #2b3224;
     padding-top: 100px;
     .footer{
         &-info{
