--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -84,7 +84,7 @@ Version      : 1.0
         a {
             display: inline-block;
             padding: 8px 16px;
-            background: rgba(39, 35, 67, 0.05);
+            background: #2b3224;
             font-size: 16px;
             font-family: $defaultFont;
             color: $black;
@@ -175,71 +175,6 @@ Version      : 1.0
         padding-left: 10px;
     }
 }
-
-// Slick SLider Customization Starts Here
-.slick-dots {
-    display: inline-block;
-    width: auto;
-    bottom: 18%;
-    left: 65px;
-
-    li {
-        button::before {
-            width: 10px;
-            height: 10px;
-            background-color: rgba($color: #FB743E, $alpha: 0.5);
-            border-radius: 50%;
-            color: transparent;
-        }
-    }
-}
-
-.slick-dots li.slick-active button:before {
-    opacity: 1;
-    background-color: #FB743E;
-    color: transparent;
-}
-
-.slick-prev,
-.slick-next {
-    top: 80%;
-    height: 54px;
-    width: 54px;
-    background-color: #FFFFFF;
-    border-radius: 50%;
-}
-
-.slick-prev:before,
-.slick-next:before {
-    color: $black;
-}
-
-.slick-prev {
-    left: 0;
-    transition: 0.3s all linear;
-
-    &:hover::before {
-        color: white;
-    }
-}
-
-.slick-next {
-    left: 155px;
-    transition: 0.3s all linear;
-
-    &:hover::before {
-        color: white;
-    }
-}
-
-.slick-prev:hover,
-.slick-prev:focus,
-.slick-next:hover,
-.slick-next:focus {
-    background-color: #73822e;
-}
-
-// Slick SLider Customization Ends Here
 // Banner Ends Here
 
 // Responsive
@@ -261,37 +196,6 @@ Version      : 1.0
 
     .banner-content-main{
         padding: 30px 20px;
-    }
-    .slick-dots li button::before{
-        background-color: white !important;
-    }
-    .banner-slider {
-        height: auto;
-        padding: 30px 0px 60px 0px;
-    }
-
-    .slick-prev,
-    .slick-next {
-        top: 95%;
-    }
-
-    .slick-prev {
-        left: 10%;
-    }
-
-    .slick-next {
-        right: 10% !important;
-        left: auto;
-    }
-
-    .slick-dots {
-        bottom: 2%;
-        left: 50% !important;
-        transform: translateX(-50%);
-    }
-
-    .slick-list {
-        margin-bottom: 30px;
     }
 }
 
@@ -315,38 +219,6 @@ Version      : 1.0
     .banner-content-main{
         padding: 30px 20px;
     }
-    .slick-dots li button::before{
-        background-color: white !important;
-    }
-
-    .banner-slider {
-        height: auto;
-        padding: 30px 0px 60px 0px;
-    }
-
-    .slick-prev,
-    .slick-next {
-        top: 95%;
-    }
-
-    .slick-prev {
-        left: 10%;
-    }
-
-    .slick-next {
-        right: 10% !important;
-        left: auto;
-    }
-
-    .slick-dots {
-        bottom: 2%;
-        left: 50% !important;
-        transform: translateX(-50%);
-    }
-
-    .slick-list {
-        margin-bottom: 30px;
-    }
 }
 
 // Small devices 575px - 767px
@@ -363,59 +235,12 @@ Version      : 1.0
     .banner-content-main{
         padding: 30px 20px;
     }
-    .slick-dots li button::before{
-        background-color: white !important;
-    }
-
-    .banner-slider {
-        height: auto;
-        padding: 30px 0px 60px 0px;
-    }
-
-    .slick-prev,
-    .slick-next {
-        top: 95%;
-    }
-
-    .slick-prev {
-        left: 10%;
-    }
-
-    .slick-next {
-        right: 10% !important;
-        left: auto;
-    }
-
-    .slick-dots {
-        bottom: 2%;
-        left: 50% !important;
-        transform: translateX(-50%);
-    }
-
-    .slick-list {
-        margin-bottom: 30px;
-    }
 }
 
 // Medium devices 768px - 991px
 @media (min-width: 768px) and (max-width: 991px) {
     .heading {
         margin-bottom: 40px;
-    }
-
-    .slick-list {
-        padding-bottom: 120px;
-    }
-
-    .banner-content-main h4 {
-        line-height: 56px;
-    }
-
-    .banner-slider {
-        height: 90vh;
-    }
-    .slick-dots li button::before{
-        background-color: white !important;
     }
 }
 
